--- a/data/gpt-3/query.ipynb
+++ b/data/gpt-3/query.ipynb
@@ -16,8 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = 'batch-2.csv'\n",
-    "batch_name = filename.split('.')[0]\n",
+    "# filename = 'batch-2.csv'\n",
+    "# batch_name = filename.split('.')[0]\n",
+    "\n",
+    "filename = '../yao/text-simplification-new-wikipedia-3.csv'\n",
+    "batch_name = 'batch-3'\n",
     "\n",
     "# Will only use the sentences\n",
     "data = load_batch(filename)\n",
@@ -68,18 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Human skin hues can range from very dark brown to very pale pink.',\n",
-       "  'Human skin tone ranges from very dark brown to very pale pink.')]"
+       "[('SummerSlam (2009) is an upcoming professional wrestling pay-per-view event produced by World Wrestling Entertainment (WWE), which will take place on August 23, 2009 at Staples Center in Los Angeles, California.',\n",
+       "  'World Wrestling Entertainment (WWE) presents Summerslam (2009) on August 23, 2009 at Staples Center, Los Angeles, California.')]"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -89,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -98,10 +102,10 @@
      "text": [
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
+      "In southwestern Ontario, Highway 401 was closed for much of December 23 between London and Tilbury, west of Chatham, due to about 100 vehicles, including numerous tractor trailers, being involved in multiple collisions, while Highway 402 was closed between London and Sarnia because of a 50-vehicle pileup and deteriorating conditions.\n",
       "\n",
       "\n",
-      "Winchester College was established in 1382, and since then its architecture has been composed of a variety of styles, reflecting its expansion in the medieval, Early Modern and Victorian eras, as well as several more recent extensions.\n"
+      "Highway 401 was closed for much of December 23 between London and Tilbury, west of Chatham, Ontario due to a large number of vehicles (including many tractor trailers) being involved in numerous collisions. The nearby Highway 402 was also closed between London and Sarnia, due to a 50-vehicle pileup and bad weather.\n"
      ]
     }
    ],
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,51 +163,51 @@
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
       "Examples: \n",
-      "Input: Gable also earned an Academy Award nomination when he portrayed Fletcher Christian in 1935's Mutiny on the Bounty.\n",
-      "Output: Gable earned an Academy Award nomination for portraying Fletcher Christian in Mutiny on the Bounty.\n",
+      "Input: A fee is the price one pays as remuneration for services, especially the honorarium paid to a doctor, lawyer, consultant, or other member of a learned profession.\n",
+      "Output: A fee is the price paid for services, especially to a doctor, lawyer, consultant, or other professional.\n",
       "\n",
-      "Input: Pauline returned in the Game Boy remake of Donkey Kong in 1994, and later Mario vs. Donkey Kong 2: March of the Minis in 2006, although the character is now described as \"Mario's friend\".\n",
-      "Output: Pauline appeared again in the Game Boy remake of Donkey Kong in 1994, and later Mario vs. Donkey Kong 2: March of the Minis in 2006, although the character is now known as \"Mario's friend\".\n",
+      "Input: The capital of the state is Aracaju (pop.\n",
+      "Output: Aracaju is the capital.\n",
       "\n",
-      "Input: Most of the songs were written by Richard M. Sherman and Robert B. Sherman.\n",
-      "Output: Richard M. Sherman and Robert B. Sherman had written most of the songs.\n",
+      "Input: Shade sets the main plot of the novel in motion when he impetuously defies that law, and inadvertently initiates a chain of events that leads to the destruction of his colony's home, forcing their premature migration, and his separation from them.\n",
+      "Output: Shade sets the novel's plot in motion when he defies that law, initiating a chain of events leading to the destruction of his colony's home, forcing their migration, and his separation from them.\n",
       "\n",
-      "Input: Disney received a full-size Oscar statuette and seven miniature ones, presented to him by 10-year-old child actress Shirley Temple.\n",
-      "Output: 10 year old shirley temple presented disney a full-size oscar statue and seven small ones.\n",
+      "Input: Shortly after attaining Category 4 status, the outer convection of the hurricane became ragged.\n",
+      "Output: Soon after having Category 4 status, the convection of the outer part of the hurricane became broken.\n",
       "\n",
-      "Input: By early on September 30, wind shear began to dramatically increase and a weakening trend began.\n",
-      "Output: Early September 30, wind shear began to dramatically increase and a weakening trend began.\n",
+      "Input: Volterra is a town in the Tuscany region of Italy.\n",
+      "Output: Volterra is a town located in the Tuscany region of Italy.\n",
       "\n",
       "Please rewrite the following complex sentence in order to make it easier to understand by non-native speakers of English. You can do so by replacing complex words with simpler synonyms (i.e. paraphrasing), deleting unimportant information (i.e. compression), and/or splitting a long complex sentence into several simpler ones. The final simplified sentence needs to be grammatical, fluent, and retain the main ideas of its original counterpart without altering its meaning.\n",
       "\n",
-      "Input: The architecture of Winchester College is a diverse set of architectural styles, reflecting the multiple periods of building from the college's foundation in 1382, through additions in the medieval and Early Modern periods, to a major expansion of accommodation in the Victorian era and then further extensions at the turn of the 20th century and more recently.\n",
+      "Input: In southwestern Ontario, Highway 401 was closed for much of December 23 between London and Tilbury, west of Chatham, due to about 100 vehicles, including numerous tractor trailers, being involved in multiple collisions, while Highway 402 was closed between London and Sarnia because of a 50-vehicle pileup and deteriorating conditions.\n",
       "Output:\n",
-      " Winchester College has a variety of architectural styles from different periods of its construction, starting from its founding in 1382. Additions were made in the medieval and Early Modern times, followed by a large expansion during the Victorian era and other extensions at the turn of the 20th century and recently.\n"
+      " In southwestern Ontario, many collisions on Highway 401 between London and Tilbury, west of Chatham, caused it to be closed on December 23, involving over 100 vehicles including tractor trailers. On the same day, deteriorating conditions and a 50-vehicle pileup forced Highway 402 to shut down between London and Sarnia.\n"
      ]
     }
    ],
    "source": [
-    "gpt_input = create_few_shot_input(data[0])\n",
+    "gpt_input = create_few_shot_input(data[0], asset)\n",
     "print(gpt_input)\n",
     "print(callGPT(gpt_input))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Danger! Queries OpenAI ~$0.02 per sentence\n",
     "out = []\n",
     "for sent in data:\n",
-    "    gpt_input = create_few_shot_input(sent)\n",
+    "    gpt_input = create_few_shot_input(sent, asset)\n",
     "    out.append(callGPT(gpt_input))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
