prepare new-wiki-3 batch data for annotation

--- a/data/yao/combine_all_outputs.ipynb
+++ b/data/yao/combine_all_outputs.ipynb
@@ -10,7 +10,7 @@
     "import random\n",
     "random.seed(2)\n",
     "\n",
-    "which_wiki = 2\n",
+    "which_wiki =3\n",
     "\n",
     "# Read in the data\n",
     "df = pd.read_csv(f'humans-output-new-wiki-{which_wiki}.csv')"
@@ -52,15 +52,26 @@
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(f'../gpt-3/gpt3-output-batch-{which_wiki}.json') as f:\n",
+    "with open(f'../gpt-3/gpt-outputs/zero-shot-batch-{which_wiki}.json') as f:\n",
     "    gpt3_zeroshot = json.load(f)\n",
     "\n",
     "# few-shot\n",
-    "with open(f'../gpt-3/gpt3-few-shot-output-batch-{which_wiki}.json') as f:\n",
+    "with open(f'../gpt-3/gpt-outputs/few-shot-batch-{which_wiki}.json') as f:\n",
     "    gpt3_fewshot = json.load(f)\n",
     "\n",
     "with open(f\"muss-output-new-wiki-{which_wiki}.json\") as f:\n",
-    "    muss = json.load(f)"
+    "    muss = json.load(f)\n",
+    "\n",
+    "# for new-wiki-3 t5-3B and 11B are txt\n",
+    "with open(f'T5-3B-new-wiki-3-output.txt') as f:\n",
+    "    t5_3B = f.readlines()\n",
+    "    for i in range(len(t5_3B)):\n",
+    "        t5_3B[i] = t5_3B[i].strip()\n",
+    "\n",
+    "with open(f'T5-11B-new-wiki-3-output.txt') as f:\n",
+    "    t5_11B = f.readlines()\n",
+    "    for i in range(len(t5_11B)):\n",
+    "        t5_11B[i] = t5_11B[i].strip()"
    ]
   },
   {
@@ -71,7 +82,9 @@
    "source": [
     "df['GPT-3-zero-shot'] = gpt3_zeroshot\n",
     "df['GPT-3-few-shot'] = gpt3_fewshot\n",
-    "df['Muss'] = muss"
+    "df['Muss'] = muss\n",
+    "df['T5-3B'] = t5_3B\n",
+    "df['T5-11B'] = t5_11B"
    ]
   },
   {
@@ -80,12 +93,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}-before-splitting.csv', index=False)"
+    "# remove \\n in Human 1 Writing and Human 2 Writing\n",
+    "df['Human 1 Writing'] = df['Human 1 Writing'].replace(\"\\n\", \"\", regex=True).apply(str)\n",
+    "df['Human 2 Writing'] = df['Human 2 Writing'].replace(\"\\n\", \"\", regex=True).apply(str)\n",
+    "\n",
+    "# replace \"  \" with \" \"\n",
+    "df['Human 1 Writing'] = df['Human 1 Writing'].replace(\"  \", \" \", regex=True).apply(str)\n",
+    "df['Human 2 Writing'] = df['Human 2 Writing'].replace(\"  \", \" \", regex=True).apply(str)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}-before-splitting.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,12 +173,14 @@
     "    df.loc[index, 'Human 2 Writing'] = reformat_output(row['Human 2 Writing'], row['Original Sentence'])\n",
     "    df.loc[index, 'GPT-3-zero-shot'] = reformat_output(row['GPT-3-zero-shot'], row['Original Sentence'])\n",
     "    df.loc[index, 'GPT-3-few-shot'] = reformat_output(row['GPT-3-few-shot'], row['Original Sentence'])\n",
-    "    df.loc[index, 'Muss'] = reformat_output(row['Muss'], row['Original Sentence'])"
+    "    df.loc[index, 'Muss'] = reformat_output(row['Muss'], row['Original Sentence'])\n",
+    "    df.loc[index, 'T5-3B'] = reformat_output(row['T5-3B'], row['Original Sentence'])\n",
+    "    df.loc[index, 'T5-11B'] = reformat_output(row['T5-11B'], row['Original Sentence'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
