add wiki 3 batch

--- a/data/yao/generate_new_wiki_3_annotator_id.ipynb
+++ b/data/yao/generate_new_wiki_3_annotator_id.ipynb
@@ -2,57 +2,151 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
-    "# set seed = 0\n",
+    "import numpy as np\n",
+    "\n",
     "random.seed(0)\n",
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "id_list = np.arange(0, 40, 1)\n",
-    "# shuffle id_list\n",
-    "random.shuffle(id_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "random.shuffle(id_list)\n",
+    "\n",
     "annotator_list = [\"vishnesh\", \"ayush\", \"anton\", \"kelly\", \"rachel\", \"vinayak\"]\n",
-    "# create dictionary with annotator as key and value is empty list\n",
-    "annotator_dict = {annotator: [] for annotator in annotator_list}"
+    "annotator_dict = {annotator: [] for annotator in annotator_list}\n",
+    "\n",
+    "# for i in np.arange(np.ceil(40)).astype(int):\n",
+    "#     temp_annotator_list = annotator_list.copy()\n",
+    "#     random.shuffle(temp_annotator_list)\n",
+    "#     for j in np.arange(3):\n",
+    "#         if i * 3 + j >= 40:\n",
+    "#             break\n",
+    "#         annotator_dict[temp_annotator_list[j * 2]].append(id_list[i * 3 + j])\n",
+    "#         annotator_dict[temp_annotator_list[j * 2 + 1]].append(id_list[i * 3 + j])\n",
+    "#         annotator_dict[temp_annotator_list[j * 2 + 2]].append(id_list[i * 3 + j])\n",
+    "\n",
+    "print(sum([len(x) for x in annotator_dict.values()]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 27, 12, 21, 29, 15, 38, 34,  1, 20,  7,  5, 10, 13, 14, 37, 22,\n",
+       "       39, 23, 17,  8, 35,  3, 33,  9,  4, 36,  6, 28, 18, 11, 30, 19, 25,\n",
+       "       31, 32, 16,  2, 26, 24])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for i in np.arange(np.ceil(40 / 3)).astype(int):\n",
-    "    temp_annotator_list = annotator_list.copy()\n",
-    "    random.shuffle(temp_annotator_list)\n",
-    "    for j in np.arange(3):\n",
-    "        if i * 3 + j >= 40:\n",
-    "            break\n",
-    "        annotator_dict[temp_annotator_list[j * 2]].append(id_list[i * 3 + j])\n",
-    "        annotator_dict[temp_annotator_list[j * 2 + 1]].append(id_list[i * 3 + j])\n"
+    "id_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'vishnesh': [12, 34, 5, 3, 4, 18, 19, 32, 16, 24],\n",
+       " 'ayush': [0, 29, 13, 39, 23, 33, 9, 11, 2],\n",
+       " 'anton': [15, 7, 10, 22, 31, 26],\n",
+       " 'kelly': [1, 20, 8, 35, 6, 25],\n",
+       " 'rachel': [21, 38, 17],\n",
+       " 'vinayak': [27, 14, 37, 36, 28, 30]}"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotator_dict[annotator_l]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'vishnesh': 20,\n",
+       " 'rachel': 20,\n",
+       " 'ayush': 20,\n",
+       " 'kelly': 20,\n",
+       " 'anton': 20,\n",
+       " 'vinayak': 20}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# End result is the ids split evenly 3 times among annotators\n",
+    "\n",
+    "annotator_dict = {annotator: [] for annotator in annotator_list}\n",
+    "annotator_list = [\"vishnesh\", \"ayush\", \"anton\", \"kelly\", \"rachel\", \"vinayak\"]\n",
+    "\n",
+    "for i in range(int(len(id_list)/2)):\n",
+    "    random.shuffle(annotator_list)\n",
+    "    for j in range(3):\n",
+    "        # if i * 3 + j >= 40:\n",
+    "        #     break\n",
+    "        # annotator_dict[annotator_list[j*2 + 1]].append(id_list[i*3+j])\n",
+    "        annotator_dict[annotator_list[j*2]].append(id_list[i*2])\n",
+    "        annotator_dict[annotator_list[j*2+1]].append(id_list[i*2+1])\n",
+    "\n",
+    "{k: len(v) for k, v in annotator_dict.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['vishnesh', 'rachel', 'ayush', 'kelly', 'anton', 'vinayak']"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "annotator_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,44 +159,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'vishnesh': [29, 17, 40, 9, 15, 24, 10, 37, 11, 30, 32, 33, 18, 26],\n",
-       " 'ayush': [2, 23, 3, 7, 12, 24, 25, 5, 11, 20, 13, 34, 18],\n",
-       " 'anton': [29, 31, 3, 22, 12, 39, 19, 5, 6, 20, 21, 27, 4],\n",
-       " 'kelly': [14, 17, 36, 22, 16, 41, 19, 37, 38, 8, 32, 27, 4, 26],\n",
-       " 'rachel': [14, 23, 40, 7, 16, 41, 25, 35, 38, 30, 21, 33, 28],\n",
-       " 'vinayak': [2, 31, 36, 9, 15, 39, 10, 35, 6, 8, 13, 34, 28]}"
+       "{'vishnesh': [3,\n",
+       "  5,\n",
+       "  6,\n",
+       "  7,\n",
+       "  8,\n",
+       "  10,\n",
+       "  15,\n",
+       "  16,\n",
+       "  17,\n",
+       "  18,\n",
+       "  23,\n",
+       "  24,\n",
+       "  25,\n",
+       "  26,\n",
+       "  27,\n",
+       "  29,\n",
+       "  30,\n",
+       "  32,\n",
+       "  33,\n",
+       "  40],\n",
+       " 'rachel': [3,\n",
+       "  4,\n",
+       "  7,\n",
+       "  8,\n",
+       "  11,\n",
+       "  12,\n",
+       "  14,\n",
+       "  16,\n",
+       "  19,\n",
+       "  20,\n",
+       "  21,\n",
+       "  24,\n",
+       "  28,\n",
+       "  29,\n",
+       "  31,\n",
+       "  32,\n",
+       "  34,\n",
+       "  35,\n",
+       "  36,\n",
+       "  37],\n",
+       " 'ayush': [2,\n",
+       "  4,\n",
+       "  5,\n",
+       "  9,\n",
+       "  11,\n",
+       "  13,\n",
+       "  15,\n",
+       "  17,\n",
+       "  19,\n",
+       "  20,\n",
+       "  22,\n",
+       "  23,\n",
+       "  27,\n",
+       "  28,\n",
+       "  34,\n",
+       "  37,\n",
+       "  38,\n",
+       "  39,\n",
+       "  40,\n",
+       "  41],\n",
+       " 'kelly': [2,\n",
+       "  3,\n",
+       "  6,\n",
+       "  7,\n",
+       "  8,\n",
+       "  12,\n",
+       "  13,\n",
+       "  17,\n",
+       "  18,\n",
+       "  19,\n",
+       "  23,\n",
+       "  24,\n",
+       "  27,\n",
+       "  28,\n",
+       "  30,\n",
+       "  34,\n",
+       "  35,\n",
+       "  37,\n",
+       "  39,\n",
+       "  40],\n",
+       " 'anton': [2,\n",
+       "  4,\n",
+       "  6,\n",
+       "  9,\n",
+       "  10,\n",
+       "  12,\n",
+       "  13,\n",
+       "  14,\n",
+       "  21,\n",
+       "  22,\n",
+       "  25,\n",
+       "  26,\n",
+       "  30,\n",
+       "  31,\n",
+       "  33,\n",
+       "  35,\n",
+       "  36,\n",
+       "  38,\n",
+       "  39,\n",
+       "  41],\n",
+       " 'vinayak': [5,\n",
+       "  9,\n",
+       "  10,\n",
+       "  11,\n",
+       "  14,\n",
+       "  15,\n",
+       "  16,\n",
+       "  18,\n",
+       "  20,\n",
+       "  21,\n",
+       "  22,\n",
+       "  25,\n",
+       "  26,\n",
+       "  29,\n",
+       "  31,\n",
+       "  32,\n",
+       "  33,\n",
+       "  36,\n",
+       "  38,\n",
+       "  41]}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "annotator_dict"
+    "{k: sorted(v) for k, v in annotator_dict.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vishnesh 14\n",
-      "ayush 13\n",
-      "anton 13\n",
-      "kelly 14\n",
-      "rachel 13\n",
-      "vinayak 13\n"
+      "kelly 20\n",
+      "vishnesh 20\n",
+      "ayush 20\n",
+      "vinayak 20\n",
+      "rachel 20\n",
+      "anton 20\n"
      ]
     }
    ],
@@ -114,15 +322,80 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: 0\n",
+      "1: 0\n",
+      "2: 3\n",
+      "3: 3\n",
+      "4: 3\n",
+      "5: 3\n",
+      "6: 3\n",
+      "7: 3\n",
+      "8: 3\n",
+      "9: 3\n",
+      "10: 3\n",
+      "11: 3\n",
+      "12: 3\n",
+      "13: 3\n",
+      "14: 3\n",
+      "15: 3\n",
+      "16: 3\n",
+      "17: 3\n",
+      "18: 3\n",
+      "19: 3\n",
+      "20: 3\n",
+      "21: 3\n",
+      "22: 3\n",
+      "23: 3\n",
+      "24: 3\n",
+      "25: 3\n",
+      "26: 3\n",
+      "27: 3\n",
+      "28: 3\n",
+      "29: 3\n",
+      "30: 3\n",
+      "31: 3\n",
+      "32: 3\n",
+      "33: 3\n",
+      "34: 3\n",
+      "35: 3\n",
+      "36: 3\n",
+      "37: 3\n",
+      "38: 3\n",
+      "39: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(40):\n",
+    "    print(f\"{i}: {sum([sum([x == i for x in y]) for y in annotator_dict.values()])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('paraphrase')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -136,12 +409,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "51d4b053945bb951b16f24566ff3322f1cf2f2e71937c6e2fa134fa8352168a0"
+    "hash": "81794d4967e6c3204c66dcd87b604927b115b27c00565d3d43f05ba2f3a2cb0d"
    }
   }
  },
