--- a/data/yao/assign_annotators_to_batches.ipynb
+++ b/data/yao/assign_annotators_to_batches.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "\n",
     "random.seed(2)\n",
     "\n",
-    "which_wiki = 1\n",
+    "which_wiki = 3\n",
     "\n",
     "# Read in the data\n",
     "df = pd.read_csv(f'all-outputs-new-wiki-{which_wiki}.csv')"
@@ -21,25 +21,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vinayak 15\n",
-      "kelly 15\n",
-      "rachel 15\n",
-      "vishnesh 15\n",
-      "ayush 15\n",
-      "anton 15\n"
+      "vishnesh 21\n",
+      "rachel 21\n",
+      "ayush 22\n",
+      "kelly 22\n",
+      "anton 13\n",
+      "vinayak 21\n"
      ]
     }
    ],
    "source": [
     "annotater_dict = json.load(open('annotater_dict-new-wiki-1.json'))\n",
-    "id_dict = json.load(open('id_dict-new-wiki-1.json'))\n",
+    "\n",
+    "# Subtract 2\n",
+    "for k, v in annotater_dict.items():\n",
+    "    annotater_dict[k] = [n - 2 for n in annotater_dict[k]]\n",
+    "\n",
+    "id_dict = {str(i): [val for val in annotater_dict.keys() if i in annotater_dict[val]] for i in range(len(df))}\n",
     "\n",
     "# print length of each annotater's list\n",
     "for annotater in annotater_dict:\n",
@@ -48,11 +53,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_idx = 50\n",
+    "split_idx = 75\n",
     "\n",
     "# Human 1 Writing,Human 1,Human 2 Writing,Human 2,GPT-3-zero-shot,GPT-3-few-shot,Muss,T5-3B,T5-11B\n",
     "system_list = [\"Human 1 Writing\", \"Human 2 Writing\", \"GPT-3-zero-shot\", \"GPT-3-few-shot\", \"Muss\", \"T5-3B\", \"T5-11B\"]\n",
@@ -100,13 +105,6 @@
     "    with open(f\"../batches/new-wiki-{which_wiki}/part2/{annotater}.json\", \"w\") as f:\n",
     "        json.dump(annotater_batch_2, f, indent=4)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
