add js path for new batches

--- a/data/yao/generate_new_wiki_3_annotator_id.ipynb
+++ b/data/yao/generate_new_wiki_3_annotator_id.ipynb
@@ -322,6 +322,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0': [],\n",
+       " '1': [],\n",
+       " '2': ['ayush', 'kelly', 'anton'],\n",
+       " '3': ['vishnesh', 'rachel', 'kelly'],\n",
+       " '4': ['rachel', 'ayush', 'anton'],\n",
+       " '5': ['vishnesh', 'ayush', 'vinayak'],\n",
+       " '6': ['vishnesh', 'kelly', 'anton'],\n",
+       " '7': ['vishnesh', 'rachel', 'kelly'],\n",
+       " '8': ['vishnesh', 'rachel', 'kelly'],\n",
+       " '9': ['ayush', 'anton', 'vinayak'],\n",
+       " '10': ['vishnesh', 'anton', 'vinayak'],\n",
+       " '11': ['rachel', 'ayush', 'vinayak'],\n",
+       " '12': ['rachel', 'kelly', 'anton'],\n",
+       " '13': ['ayush', 'kelly', 'anton'],\n",
+       " '14': ['rachel', 'anton', 'vinayak'],\n",
+       " '15': ['vishnesh', 'ayush', 'vinayak'],\n",
+       " '16': ['vishnesh', 'rachel', 'vinayak'],\n",
+       " '17': ['vishnesh', 'ayush', 'kelly'],\n",
+       " '18': ['vishnesh', 'kelly', 'vinayak'],\n",
+       " '19': ['rachel', 'ayush', 'kelly'],\n",
+       " '20': ['rachel', 'ayush', 'vinayak'],\n",
+       " '21': ['rachel', 'anton', 'vinayak'],\n",
+       " '22': ['ayush', 'anton', 'vinayak'],\n",
+       " '23': ['vishnesh', 'ayush', 'kelly'],\n",
+       " '24': ['vishnesh', 'rachel', 'kelly'],\n",
+       " '25': ['vishnesh', 'anton', 'vinayak'],\n",
+       " '26': ['vishnesh', 'anton', 'vinayak'],\n",
+       " '27': ['vishnesh', 'ayush', 'kelly'],\n",
+       " '28': ['rachel', 'ayush', 'kelly'],\n",
+       " '29': ['vishnesh', 'rachel', 'vinayak'],\n",
+       " '30': ['vishnesh', 'kelly', 'anton'],\n",
+       " '31': ['rachel', 'anton', 'vinayak'],\n",
+       " '32': ['vishnesh', 'rachel', 'vinayak'],\n",
+       " '33': ['vishnesh', 'anton', 'vinayak'],\n",
+       " '34': ['rachel', 'ayush', 'kelly'],\n",
+       " '35': ['rachel', 'kelly', 'anton'],\n",
+       " '36': ['rachel', 'anton', 'vinayak'],\n",
+       " '37': ['rachel', 'ayush', 'kelly'],\n",
+       " '38': ['ayush', 'anton', 'vinayak'],\n",
+       " '39': ['ayush', 'kelly', 'anton']}"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tmp = "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
